# souzoku-shield

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  agent_run.py  docx_export.py  main.py  models.py  rules_loader.py
app/engine/: __init__.py  harness.py  reducer.py
app/static/: app.js  index.html  styles.css
docs/: final_submission_runbook.md  protopedia_replacement.md  video_script_60s.md
docs/protopedia_assets/: README.md  souzoku_shield_protopedia_visuals.pptx
rules/: expert_knowledge.json  shomen_template.json
scripts/: production_evidence.py  verify_no_secrets.py
tests/: conftest.py  test_api.py  test_harness.py  test_production_evidence.py  test_reducer.py  test_safety.py
