[project]
name = "souzoku-attachment-agent"
version = "0.1.0"
description = "Hackathon M1 demo for deterministic inheritance tax attachment drafting"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-docx>=1.1",
  "google-genai==2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
